[gd_scene load_steps=3 format=3 uid="uid://pq2pdpwae0oo"]

[ext_resource type="Script" path="res://ui/richmen_bio.gd" id="1_jbvsi"]
[ext_resource type="Texture2D" uid="uid://disk2funmk7lp" path="res://assets/ui_assets/nine_patch.png" id="2_binxb"]

[node name="RichmenBio" type="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_force_pass_scroll_events = false
script = ExtResource("1_jbvsi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "x"

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer"]
self_modulate = Color(0.964706, 0.603922, 0.172549, 0.917647)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_binxb")
region_rect = Rect2(135, 4, 128, 128)
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="BioTitle" type="Label" parent="VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.894118, 0.87451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Somebody"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BioText" type="RichTextLabel" parent="VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.998414, 0.895251, 0.873687, 1)
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "lorem ipsum"
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
